--- a/web/index copy.html
+++ b/web/index copy.html
@@ -37,16 +37,17 @@
 
 </head>
 <body>
-  
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    import { getAuth, signInWithPopup, GoogleAuthProvider } from "firebase/auth";
-    import { initializeApp } from "firebase/app";
-    import { getFirestore } from "firebase/firestore";
-    // Your web app's Firebase configuration
+  <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+       <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-analytics.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-auth.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-firestore.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-storage.js"></script>
+       <script src="https://apis.google.com/js/platform.js" async defer></script>
+       <script>
+       // Your web app's Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDE7qmD8KTlNg8bMawzevJF1vEvxZEFjz8",
       authDomain: "loginlogout1.firebaseapp.com",
@@ -59,6 +60,7 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
   </script>
+
 
 
 
